--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content='Coaching Profondo Grazie ad un approccio multidimensionale, tecniche linguistiche e subliminali, ti accompagno verso gli obiettivi desiderati, che si sviluppano dal profondo, si realizzano sulla superficie e si manifestano in nuovi stati percepiti dell’essere. Il rispetto della persona, la qualità dell’ascolto e la capacità di intervenire in modo corretto, contraddistinguono l’efficienza e la qualità del … Leggi tutto "Coaching Profondo"'
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta property="og:title" content="Coaching Profondo - Danilo Barzaghini" />
+    <!-- TO DO -->
+    <!-- <meta property="og:url" content="https://sublimina.li/"> -->
+    <link rel="icon" href="%PUBLIC_URL%/logo32.png" sizes="32x32" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo180.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Danilo Bazarghini</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
